--- a/source/BloonsTD6.Mod.MultiUser/BloonsTD6.Mod.MultiUser.csproj
+++ b/source/BloonsTD6.Mod.MultiUser/BloonsTD6.Mod.MultiUser.csproj
@@ -1,42 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>NET472</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>preview</LangVersion>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
-    <Reference Include="BloonsTD6 Mod Helper">
-      <HintPath>..\Dependencies\BloonsTD6 Mod Helper.dll</HintPath>
+    <Reference Include="Il2CppInterop.Common">
+      <HintPath>$(BloonsTD6)\MelonLoader\net6\Il2CppInterop.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Il2Cppmscorlib">
-      <HintPath>..\Dependencies\Il2Cppmscorlib.dll</HintPath>
-    </Reference>
-    <Reference Include="MelonLoader">
-      <HintPath>..\Dependencies\MelonLoader.dll</HintPath>
-    </Reference>
-    <Reference Include="UnhollowerBaseLib">
-      <HintPath>..\Dependencies\UnhollowerBaseLib.dll</HintPath>
-    </Reference>
-    <Reference Include="Harmony">
-      <HintPath>..\Dependencies\0Harmony.dll</HintPath>
-    </Reference>
-    <Reference Include="NinjaKiwi.LiNK">
-      <HintPath>..\Dependencies\NinjaKiwi.LiNK.dll</HintPath>
-    </Reference>
-    <Reference Include="Il2CppNewtonsoft.Json.dll">
-      <HintPath>..\Dependencies\Il2CppNewtonsoft.Json.dll</HintPath>
-    </Reference>
-
-    <Reference Include="System.Net.Http" />
+    <PackageReference Include="ILRepack.Lib.MSBuild.Task" Version="2.0.29"/>
   </ItemGroup>
 
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Copy SourceFiles="$(TargetDir)$(TargetFileName)" DestinationFolder="$(BLOONSTD6_PATH)/Mods" ContinueOnError="true" />
-  </Target>
+  <ItemGroup>
+    <PackageReference Include="Reloaded.Memory.Sigscan" Version="3.1.9" />
+  </ItemGroup>
 
+  <Import Project="..\..\..\btd6.targets"/>
 </Project>
