--- a/source/BloonsTD6.Mod.MultiUser/BloonsTD6.Mod.MultiUser.csproj
+++ b/source/BloonsTD6.Mod.MultiUser/BloonsTD6.Mod.MultiUser.csproj
@@ -19,5 +19,9 @@
     </Reference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include=".github\workflows\build.yml" />
+  </ItemGroup>
+
   <Import Project="..\..\..\btd6.targets" />
 </Project>
