--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -122,5 +122,5 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: ${{ env.BLOONSTD6 }}/Mods/${{ env.PROJECT_NAME }}.dll
-          body_path: BloonsTD6.Mod.MultiUser/${{ env.PROJECT_NAME }}/LATEST.md
+          body_path: BloonsTD6.Mod.MultiUser/BloonsTD6.Mod.MultiUser/${{ env.PROJECT_NAME }}/LATEST.md
           fail_on_unmatched_files: true
